Fix minor issues / code visibility

--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@ section
 {
 	color: white;
 	text-shadow: 1px 1px 0.5px black;
-	padding-top: 80px;
+	margin-top: 80px !important;
 }
 
 
@@ -88,6 +88,26 @@ section
 {
 	margin-left: 15% !important;
 	margin-right: 10% !important;
+}
+
+.singlePost
+{
+	max-width: 90%;
+	margin: auto;
+	border: 0.5px solid black;
+	background-color: rgba(70, 70, 70, 0.5);
+	border-radius: 5px;
+	box-shadow: 2px 2px 5px black;
+
+}
+
+.listNews
+{
+	border: 0.5px solid black;
+	background-color: rgba(70, 70, 70, 0.5);
+	border-radius: 5px;
+	box-shadow: 2px 2px 5px black;
+	margin-bottom: 5px !important;
 }
 /*=========================================================*/
 
